libbitcoinkernel-sys/bitcoin/src/kernel/bitcoinkernel.h


typedef struct btck_Transaction btck_Transaction;
typedef struct btck_ScriptPubkey btck_ScriptPubkey;
typedef struct btck_TransactionOutput btck_TransactionOutput;
typedef struct btck_LoggingConnection btck_LoggingConnection;
typedef struct btck_ChainParameters btck_ChainParameters;
typedef struct btck_ContextOptions btck_ContextOptions;
typedef struct btck_Context btck_Context;
typedef struct btck_BlockTreeEntry btck_BlockTreeEntry;
typedef struct btck_ChainstateManagerOptions btck_ChainstateManagerOptions;
typedef struct btck_ChainstateManager btck_ChainstateManager;
typedef struct btck_Block btck_Block;
typedef struct btck_BlockValidationState btck_BlockValidationState;
typedef struct btck_ConsensusParams btck_ConsensusParams;
typedef struct btck_Chain btck_Chain;
typedef struct btck_BlockSpentOutputs btck_BlockSpentOutputs;
typedef struct btck_TransactionSpentOutputs btck_TransactionSpentOutputs;
typedef struct btck_Coin btck_Coin;
typedef struct btck_BlockHash btck_BlockHash;
typedef struct btck_TransactionInput btck_TransactionInput;
typedef struct btck_TransactionOutPoint btck_TransactionOutPoint;
typedef struct btck_PrecomputedTransactionData btck_PrecomputedTransactionData;
typedef struct btck_Txid btck_Txid;
typedef struct btck_BlockHeader btck_BlockHeader;
typedef uint8_t btck_SynchronizationState;
typedef uint8_t btck_Warning;
typedef void (*btck_LogCallback)(void* user_data, const char* message, size_t message_len);
typedef void (*btck_DestroyCallback)(void* user_data);
typedef void (*btck_NotifyBlockTip)(void* user_data, btck_SynchronizationState state, const btck_BlockTreeEntry* entry, double verification_progress);
typedef void (*btck_NotifyHeaderTip)(void* user_data, btck_SynchronizationState state, int64_t height, int64_t timestamp, int presync);
typedef void (*btck_NotifyProgress)(void* user_data, const char* title, size_t title_len, int progress_percent, int resume_possible);
typedef void (*btck_NotifyWarningSet)(void* user_data, btck_Warning warning, const char* message, size_t message_len);
typedef void (*btck_NotifyWarningUnset)(void* user_data, btck_Warning warning);
typedef void (*btck_NotifyFlushError)(void* user_data, const char* message, size_t message_len);
typedef void (*btck_NotifyFatalError)(void* user_data, const char* message, size_t message_len);
typedef void (*btck_ValidationInterfaceBlockChecked)(void* user_data, btck_Block* block, const btck_BlockValidationState* state);
typedef void (*btck_ValidationInterfacePoWValidBlock)(void* user_data, btck_Block* block, const btck_BlockTreeEntry* entry);
typedef void (*btck_ValidationInterfaceBlockConnected)(void* user_data, btck_Block* block, const btck_BlockTreeEntry* entry);
typedef void (*btck_ValidationInterfaceBlockDisconnected)(void* user_data, btck_Block* block, const btck_BlockTreeEntry* entry);
typedef int (*btck_WriteBytes)(const void* bytes, size_t size, void* userdata);
typedef uint8_t btck_ValidationMode;
typedef uint32_t btck_BlockValidationResult;
typedef struct {
    void* user_data;                                              
    btck_DestroyCallback user_data_destroy;                       
    btck_ValidationInterfaceBlockChecked block_checked;           
    btck_ValidationInterfacePoWValidBlock pow_valid_block;        
    btck_ValidationInterfaceBlockConnected block_connected;       
    btck_ValidationInterfaceBlockDisconnected block_disconnected; 
} btck_ValidationInterfaceCallbacks;
typedef struct {
    void* user_data;                        
    btck_DestroyCallback user_data_destroy; 
    btck_NotifyBlockTip block_tip;          
    btck_NotifyHeaderTip header_tip;        
    btck_NotifyProgress progress;           
    btck_NotifyWarningSet warning_set;      
    btck_NotifyWarningUnset warning_unset;  
    btck_NotifyFlushError flush_error;      
    btck_NotifyFatalError fatal_error;      
} btck_NotificationInterfaceCallbacks;
typedef uint8_t btck_LogCategory;
typedef uint8_t btck_LogLevel;
typedef struct {
    int log_timestamps;               
    int log_time_micros;              
    int log_threadnames;              
    int log_sourcelocations;          
    int always_print_category_levels; 
} btck_LoggingOptions;
typedef uint8_t btck_ScriptVerifyStatus;
typedef uint32_t btck_ScriptVerificationFlags;
typedef uint8_t btck_ChainType;
BITCOINKERNEL_API btck_Transaction* BITCOINKERNEL_WARN_UNUSED_RESULT btck_transaction_create(
    const void* raw_transaction, size_t raw_transaction_len);
BITCOINKERNEL_API btck_Transaction* BITCOINKERNEL_WARN_UNUSED_RESULT btck_transaction_copy(
    const btck_Transaction* transaction) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API int BITCOINKERNEL_WARN_UNUSED_RESULT btck_transaction_to_bytes(
    const btck_Transaction* transaction,
    btck_WriteBytes writer,
    void* user_data) BITCOINKERNEL_ARG_NONNULL(1, 2);
BITCOINKERNEL_API size_t btck_transaction_count_outputs(
    const btck_Transaction* transaction) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API const btck_TransactionOutput* btck_transaction_get_output_at(
    const btck_Transaction* transaction, size_t output_index) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API const btck_TransactionInput* btck_transaction_get_input_at(
    const btck_Transaction* transaction, size_t input_index) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API size_t btck_transaction_count_inputs(
    const btck_Transaction* transaction) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API uint32_t btck_transaction_get_locktime(
    const btck_Transaction* transaction) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API const btck_Txid* btck_transaction_get_txid(
    const btck_Transaction* transaction) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_transaction_destroy(btck_Transaction* transaction);
BITCOINKERNEL_API btck_PrecomputedTransactionData* BITCOINKERNEL_WARN_UNUSED_RESULT btck_precomputed_transaction_data_create(
    const btck_Transaction* tx_to,
    const btck_TransactionOutput** spent_outputs, size_t spent_outputs_len) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API btck_PrecomputedTransactionData* BITCOINKERNEL_WARN_UNUSED_RESULT btck_precomputed_transaction_data_copy(
    const btck_PrecomputedTransactionData* precomputed_txdata) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_precomputed_transaction_data_destroy(btck_PrecomputedTransactionData* precomputed_txdata);
BITCOINKERNEL_API btck_ScriptPubkey* BITCOINKERNEL_WARN_UNUSED_RESULT btck_script_pubkey_create(
    const void* script_pubkey, size_t script_pubkey_len);
BITCOINKERNEL_API btck_ScriptPubkey* BITCOINKERNEL_WARN_UNUSED_RESULT btck_script_pubkey_copy(
    const btck_ScriptPubkey* script_pubkey) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API int BITCOINKERNEL_WARN_UNUSED_RESULT btck_script_pubkey_verify(
    const btck_ScriptPubkey* script_pubkey,
    int64_t amount,
    const btck_Transaction* tx_to,
    const btck_PrecomputedTransactionData* precomputed_txdata,
    unsigned int input_index,
    btck_ScriptVerificationFlags flags,
    btck_ScriptVerifyStatus* status) BITCOINKERNEL_ARG_NONNULL(1, 3);
BITCOINKERNEL_API int BITCOINKERNEL_WARN_UNUSED_RESULT btck_script_pubkey_to_bytes(
    const btck_ScriptPubkey* script_pubkey,
    btck_WriteBytes writer,
    void* user_data) BITCOINKERNEL_ARG_NONNULL(1, 2);
BITCOINKERNEL_API void btck_script_pubkey_destroy(btck_ScriptPubkey* script_pubkey);
BITCOINKERNEL_API btck_TransactionOutput* BITCOINKERNEL_WARN_UNUSED_RESULT btck_transaction_output_create(
    const btck_ScriptPubkey* script_pubkey,
    int64_t amount) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API const btck_ScriptPubkey* btck_transaction_output_get_script_pubkey(
    const btck_TransactionOutput* transaction_output) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API int64_t btck_transaction_output_get_amount(
    const btck_TransactionOutput* transaction_output) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API btck_TransactionOutput* BITCOINKERNEL_WARN_UNUSED_RESULT btck_transaction_output_copy(
    const btck_TransactionOutput* transaction_output) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_transaction_output_destroy(btck_TransactionOutput* transaction_output);
BITCOINKERNEL_API void btck_logging_disable();
BITCOINKERNEL_API void btck_logging_set_options(btck_LoggingOptions options);
BITCOINKERNEL_API void btck_logging_set_level_category(btck_LogCategory category, btck_LogLevel level);
BITCOINKERNEL_API void btck_logging_enable_category(btck_LogCategory category);
BITCOINKERNEL_API void btck_logging_disable_category(btck_LogCategory category);
BITCOINKERNEL_API btck_LoggingConnection* BITCOINKERNEL_WARN_UNUSED_RESULT btck_logging_connection_create(
    btck_LogCallback log_callback,
    void* user_data,
    btck_DestroyCallback user_data_destroy_callback) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_logging_connection_destroy(btck_LoggingConnection* logging_connection);
BITCOINKERNEL_API btck_ChainParameters* BITCOINKERNEL_WARN_UNUSED_RESULT btck_chain_parameters_create(
    btck_ChainType chain_type);
BITCOINKERNEL_API btck_ChainParameters* BITCOINKERNEL_WARN_UNUSED_RESULT btck_chain_parameters_copy(
    const btck_ChainParameters* chain_parameters) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API const btck_ConsensusParams* btck_chain_parameters_get_consensus_params(
    const btck_ChainParameters* chain_parameters) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_chain_parameters_destroy(btck_ChainParameters* chain_parameters);
BITCOINKERNEL_API btck_ContextOptions* BITCOINKERNEL_WARN_UNUSED_RESULT btck_context_options_create();
BITCOINKERNEL_API void btck_context_options_set_chainparams(
    btck_ContextOptions* context_options,
    const btck_ChainParameters* chain_parameters) BITCOINKERNEL_ARG_NONNULL(1, 2);
BITCOINKERNEL_API void btck_context_options_set_notifications(
    btck_ContextOptions* context_options,
    btck_NotificationInterfaceCallbacks notifications) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_context_options_set_validation_interface(
    btck_ContextOptions* context_options,
    btck_ValidationInterfaceCallbacks validation_interface_callbacks) BITCOINKERNEL_ARG_NONNULL(1);
BITCOINKERNEL_API void btck_context_options_destroy(btck_ContextOptions* context_options);
typedef uint32_t btck_BlockCheckFlags;