libbitcoinkernel-sys/src/lib.rs

#![allow(non_camel_case_types)]

use core::ffi::{c_char, c_int, c_uchar, c_uint, c_void};

// Primitive type aliases - alphabetical order

pub type btck_BlockCheckFlags = u32;
pub type btck_BlockValidationResult = u32;
pub type btck_ChainType = u8;
pub type btck_LogCategory = u8;
pub type btck_LogLevel = u8;
pub type btck_ScriptVerificationFlags = u32;
pub type btck_ScriptVerifyStatus = u8;
pub type btck_SynchronizationState = u8;
pub type btck_ValidationMode = u8;
pub type btck_Warning = u8;

// Opaque types - alphabetical order

#[repr(C)]
pub struct btck_Block {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_BlockHash {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_BlockHeader {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_BlockSpentOutputs {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_BlockTreeEntry {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_BlockValidationState {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_Chain {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ChainParameters {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ChainstateManager {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ChainstateManagerOptions {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_Coin {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ConsensusParams {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_Context {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ContextOptions {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_LoggingConnection {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_PrecomputedTransactionData {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_ScriptPubkey {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_Transaction {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_TransactionInput {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_TransactionOutPoint {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_TransactionOutput {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_TransactionSpentOutputs {
    _unused: [u8; 0],
}
#[repr(C)]
pub struct btck_Txid {
    _unused: [u8; 0],
}

// Function-pointer type aliases - alphabetical order

pub type btck_DestroyCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;

pub type btck_LogCallback = Option<
    unsafe extern "C" fn(user_data: *mut c_void, message: *const c_char, message_len: usize),
>;

pub type btck_NotifyBlockTip = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        state: btck_SynchronizationState,
        entry: *const btck_BlockTreeEntry,
        verification_progress: f64,
    ),
>;

pub type btck_NotifyFatalError = Option<
    unsafe extern "C" fn(user_data: *mut c_void, message: *const c_char, message_len: usize),
>;

pub type btck_NotifyFlushError = Option<
    unsafe extern "C" fn(user_data: *mut c_void, message: *const c_char, message_len: usize),
>;

pub type btck_NotifyHeaderTip = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        state: btck_SynchronizationState,
        height: i64,
        timestamp: i64,
        presync: c_int,
    ),
>;

pub type btck_NotifyProgress = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        title: *const c_char,
        title_len: usize,
        progress_percent: c_int,
        resume_possible: c_int,
    ),
>;

pub type btck_NotifyWarningSet = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        warning: btck_Warning,
        message: *const c_char,
        message_len: usize,
    ),
>;

pub type btck_NotifyWarningUnset =
    Option<unsafe extern "C" fn(user_data: *mut c_void, warning: btck_Warning)>;

pub type btck_ValidationInterfaceBlockChecked = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        block: *mut btck_Block,
        state: *const btck_BlockValidationState,
    ),
>;

pub type btck_ValidationInterfaceBlockConnected = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        block: *mut btck_Block,
        entry: *const btck_BlockTreeEntry,
    ),
>;

pub type btck_ValidationInterfaceBlockDisconnected = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        block: *mut btck_Block,
        entry: *const btck_BlockTreeEntry,
    ),
>;

pub type btck_ValidationInterfacePoWValidBlock = Option<
    unsafe extern "C" fn(
        user_data: *mut c_void,
        block: *mut btck_Block,
        entry: *const btck_BlockTreeEntry,
    ),
>;

pub type btck_WriteBytes =
    Option<unsafe extern "C" fn(bytes: *const c_void, size: usize, userdata: *mut c_void) -> c_int>;

// These structs are passed by value across the FFI boundary - alphabetical order
// Field order must match C exactly - sizes verified by const assertions below

#[repr(C)]
pub struct btck_LoggingOptions {
    pub log_timestamps: c_int,
    pub log_time_micros: c_int,
    pub log_threadnames: c_int,
    pub log_sourcelocations: c_int,
    pub always_print_category_levels: c_int,
}

#[repr(C)]
pub struct btck_NotificationInterfaceCallbacks {
    pub user_data: *mut c_void,
    pub user_data_destroy: btck_DestroyCallback,
    pub block_tip: btck_NotifyBlockTip,
    pub header_tip: btck_NotifyHeaderTip,
    pub progress: btck_NotifyProgress,
    pub warning_set: btck_NotifyWarningSet,
    pub warning_unset: btck_NotifyWarningUnset,
    pub flush_error: btck_NotifyFlushError,
    pub fatal_error: btck_NotifyFatalError,
}

#[repr(C)]
pub struct btck_ValidationInterfaceCallbacks {
    pub user_data: *mut c_void,
    pub user_data_destroy: btck_DestroyCallback,
    pub block_checked: btck_ValidationInterfaceBlockChecked,
    pub pow_valid_block: btck_ValidationInterfacePoWValidBlock,
    pub block_connected: btck_ValidationInterfaceBlockConnected,
    pub block_disconnected: btck_ValidationInterfaceBlockDisconnected,
}

// Compile-time layout guards - catch any ABI drift
const _: () = {
    assert!(core::mem::size_of::<btck_LoggingOptions>() == 20);
    assert!(core::mem::align_of::<btck_LoggingOptions>() == 4);
    assert!(core::mem::size_of::<btck_NotificationInterfaceCallbacks>() == 72);
    assert!(core::mem::align_of::<btck_NotificationInterfaceCallbacks>() == 8);
    assert!(core::mem::size_of::<btck_ValidationInterfaceCallbacks>() == 48);
    assert!(core::mem::align_of::<btck_ValidationInterfaceCallbacks>() == 8);
};

// extern "C" declarations - grouped by type

extern "C" {

    // --- Transaction --------------------------------------------------------

    pub fn btck_transaction_create(
        raw_transaction: *const c_void,
        raw_transaction_len: usize,
    ) -> *mut btck_Transaction;

    pub fn btck_transaction_copy(transaction: *const btck_Transaction) -> *mut btck_Transaction;

    pub fn btck_transaction_to_bytes(
        transaction: *const btck_Transaction,
        writer: btck_WriteBytes,
        user_data: *mut c_void,
    ) -> c_int;

    pub fn btck_transaction_count_outputs(transaction: *const btck_Transaction) -> usize;

    pub fn btck_transaction_get_output_at(
        transaction: *const btck_Transaction,
        output_index: usize,
    ) -> *const btck_TransactionOutput;

    pub fn btck_transaction_get_input_at(
        transaction: *const btck_Transaction,
        input_index: usize,
    ) -> *const btck_TransactionInput;

    pub fn btck_transaction_count_inputs(transaction: *const btck_Transaction) -> usize;

    pub fn btck_transaction_get_locktime(transaction: *const btck_Transaction) -> u32;

    pub fn btck_transaction_get_txid(transaction: *const btck_Transaction) -> *const btck_Txid;

    pub fn btck_transaction_destroy(transaction: *mut btck_Transaction);

    // --- PrecomputedTransactionData -----------------------------------------

    pub fn btck_precomputed_transaction_data_create(
        tx_to: *const btck_Transaction,
        spent_outputs: *mut *const btck_TransactionOutput,
        spent_outputs_len: usize,
    ) -> *mut btck_PrecomputedTransactionData;

    pub fn btck_precomputed_transaction_data_copy(
        precomputed_txdata: *const btck_PrecomputedTransactionData,
    ) -> *mut btck_PrecomputedTransactionData;

    pub fn btck_precomputed_transaction_data_destroy(
        precomputed_txdata: *mut btck_PrecomputedTransactionData,
    );

    // --- ScriptPubkey -------------------------------------------------------

    pub fn btck_script_pubkey_create(
        script_pubkey: *const c_void,
        script_pubkey_len: usize,
    ) -> *mut btck_ScriptPubkey;

    pub fn btck_script_pubkey_copy(
        script_pubkey: *const btck_ScriptPubkey,
    ) -> *mut btck_ScriptPubkey;

    pub fn btck_script_pubkey_verify(
        script_pubkey: *const btck_ScriptPubkey,
        amount: i64,
        tx_to: *const btck_Transaction,
        precomputed_txdata: *const btck_PrecomputedTransactionData,
        input_index: c_uint,
        flags: btck_ScriptVerificationFlags,
        status: *mut btck_ScriptVerifyStatus,
    ) -> c_int;

    pub fn btck_script_pubkey_to_bytes(
        script_pubkey: *const btck_ScriptPubkey,
        writer: btck_WriteBytes,
        user_data: *mut c_void,
    ) -> c_int;

    pub fn btck_script_pubkey_destroy(script_pubkey: *mut btck_ScriptPubkey);

    // --- TransactionOutput --------------------------------------------------

    pub fn btck_transaction_output_create(
        script_pubkey: *const btck_ScriptPubkey,
        amount: i64,
    ) -> *mut btck_TransactionOutput;

    pub fn btck_transaction_output_get_script_pubkey(
        transaction_output: *const btck_TransactionOutput,
    ) -> *const btck_ScriptPubkey;

    pub fn btck_transaction_output_get_amount(
        transaction_output: *const btck_TransactionOutput,
    ) -> i64;

    pub fn btck_transaction_output_copy(
        transaction_output: *const btck_TransactionOutput,
    ) -> *mut btck_TransactionOutput;

    pub fn btck_transaction_output_destroy(transaction_output: *mut btck_TransactionOutput);

    // --- Logging ------------------------------------------------------------

    pub fn btck_logging_disable();

    pub fn btck_logging_set_options(options: btck_LoggingOptions);

    pub fn btck_logging_set_level_category(category: btck_LogCategory, level: btck_LogLevel);

    pub fn btck_logging_enable_category(category: btck_LogCategory);

    pub fn btck_logging_disable_category(category: btck_LogCategory);

    pub fn btck_logging_connection_create(
        log_callback: btck_LogCallback,
        user_data: *mut c_void,
        user_data_destroy_callback: btck_DestroyCallback,
    ) -> *mut btck_LoggingConnection;

    pub fn btck_logging_connection_destroy(logging_connection: *mut btck_LoggingConnection);

    // --- ChainParameters ----------------------------------------------------

    pub fn btck_chain_parameters_create(chain_type: btck_ChainType) -> *mut btck_ChainParameters;

    pub fn btck_chain_parameters_copy(
        chain_parameters: *const btck_ChainParameters,
    ) -> *mut btck_ChainParameters;

    pub fn btck_chain_parameters_get_consensus_params(
        chain_parameters: *const btck_ChainParameters,
    ) -> *const btck_ConsensusParams;

    pub fn btck_chain_parameters_destroy(chain_parameters: *mut btck_ChainParameters);

    // --- ContextOptions -----------------------------------------------------

    pub fn btck_context_options_create() -> *mut btck_ContextOptions;

    pub fn btck_context_options_set_chainparams(
        context_options: *mut btck_ContextOptions,
        chain_parameters: *const btck_ChainParameters,
    );

    pub fn btck_context_options_set_notifications(
        context_options: *mut btck_ContextOptions,
        notifications: btck_NotificationInterfaceCallbacks,
    );

    pub fn btck_context_options_set_validation_interface(
        context_options: *mut btck_ContextOptions,
        validation_interface_callbacks: btck_ValidationInterfaceCallbacks,
    );

    pub fn btck_context_options_destroy(context_options: *mut btck_ContextOptions);
